base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend
  namespace: mern-app
  labels:
    app: mern-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mern-backend
    spec:
      containers:
        - name: mern-backend
          image: 834732843065.dkr.ecr.ap-south-1.amazonaws.com/mern-devops-backend:6dae9b231192ab55c304c3a26f7aefab04e146a3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/tutorials
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/tutorials
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
