base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-frontend
  namespace: mern-app
  labels:
    app: mern-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mern-frontend
    spec:
      containers:
        - name: mern-frontend
          image: 834732843065.dkr.ecr.ap-south-1.amazonaws.com/mern-devops-frontend:306b7dea491829ad238b6e7061d223c20109f0d9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
