base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-backend-svc
  namespace: mern-app
spec:
  selector:
    app: mern-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
