base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-frontend-svc
  namespace: mern-app
spec:
  selector:
    app: mern-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
